<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WildlifeAfrica</string>
    <string name="action_settings">Settings</string>
    <string name="action_mapView">Map</string>
    <string name="action_filter">Filter</string>
    <string name="action_addSighting">Add Sighting</string>
    <string name="action_listView">List</string>
    <string name="action_refresh">Refresh</string>
    <string name="listItem_photo">Photo</string>
    <string name="listItem_name">Animal\'s name</string>
    <string name="listItem_date">Date</string>
    <string name="listItem_distance">Distance</string>
    <string name="add_choose">Choose the Animal</string>
    <string name="add_addPhoto">Add a Photo</string>
    <string name="add_camera">Camera</string>
    <string name="add_gallery">Gallelry</string>
    <string name="add_description">Add a Description</string>
    <string name="add_name">Your Name</string>
    <string name="add_save">Save</string>
    <string name="add_cancel">Cancel</string>

    <string-array name="animalOverview_array">
        <item>Blue Duiker</item>
        <item>Bontebok</item>
        <item>Buffalo</item>
        <item>Bushbuck</item>
        <item>Bushpig</item>
        <item>Cape Grey Mongoose</item>
        <item>Cape Hare</item>
        <item>Cheetah</item>
        <item>Common Reedbuck</item>
        <item>Elephant</item>
        <item>Grey Duiker</item>
        <item>Giraffe</item>
        <item>Grysbok</item>
        <item>Impala</item>
        <item>Mountain Reedbuck</item>
        <item>Nyala female</item>
        <item>Nyala male</item>
        <item>Ostrich</item>
        <item>Porcupine</item>
        <item>Springbok</item>
        <item>Spring Hare</item>
        <item>Vervet Monkeys</item>
        <item>Waterbuck</item>
        <item>Warthog</item>
        <item>White Rhino</item>
        <item>Wildebeest</item>
        <item>Zebra</item>
        <item>Other</item>
    </string-array>
    <string-array name="filterOptions">
        <item>Time</item>
        <item>Name: A-Z</item>
        <item>Name: Z-A</item>
        <item>Distance</item>
    </string-array>

</resources>