<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_refresh"
        android:icon="@drawable/ic_action_refresh"
        android:title="@string/action_refresh"
        android:showAsAction="always"/>
    <item
        android:id="@+id/action_mapView"
        android:icon="@drawable/ic_action_map"
        android:title="@string/action_mapView"
        android:showAsAction="always"/>
    <item
        android:id="@+id/action_filter"
        android:icon="@drawable/ic_action_search"
        android:title="@string/action_filter"
        android:showAsAction="always"/>
    <item
        android:id="@+id/action_addSighting"
        android:icon="@drawable/ic_action_sighting"
        android:title="@string/action_listView"
        android:showAsAction="always"/>

</menu>