<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/listItem_photo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/listItem_photo"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:src="@drawable/ic_launcher" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/listItem_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/listItem_name"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/listItem_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/listItem_date"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/listItem_distance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/listItem_distance"
            android:textSize="14sp" />
    </LinearLayout>

</LinearLayout>