<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_choose"
            android:textSize="14sp" />

        <Spinner
            android:id="@+id/sighting_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_vertical_margin" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingTop="20dp"
            android:text="@string/add_addPhoto"
            android:textSize="14sp" />

        <ImageView
            android:id="@+id/sighting_image"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/listItem_photo"
            android:minHeight="250dp"
            android:src="@drawable/ic_content_picture" />
        
        <View
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:background="?android:attr/dividerVertical" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/activity_vertical_margin" >

            <ImageButton
                android:id="@+id/sighting_galleryBtn"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:contentDescription="@string/add_gallery"
                android:src="@drawable/ic_content_picture" />

            <View
                android:layout_width="1dip"
                android:layout_height="fill_parent"
                android:layout_marginBottom="4dip"
                android:layout_marginTop="4dip"
                android:background="?android:attr/dividerVertical" />

            <ImageButton
                android:id="@+id/sighting_cameraBtn"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:contentDescription="@string/add_camera"
                android:src="@drawable/ic_access_camera" />
        </LinearLayout>
        
        <View
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:layout_marginTop="-12dp"
            android:background="?android:attr/dividerVertical" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:text="@string/add_description"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/sighting_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:text="@string/add_name"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/sighting_observer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:textSize="18sp" />
    </LinearLayout>

</ScrollView>